<resources>
    // App Name
    <string name="app_name">TalkApp</string>

    // Auth Screens
    <string name="img_description_logo">Logo AppChat\n</string>
    <string name="input_hint_name">Digite seu nome</string>
    <string name="input_hint_email">Digite seu e-mail</string>
    <string name="input_hint_password">Digite sua senha</string>
    <string name="txt_register_now">Cadastre-se agora</string>
    <string name="txt_sign_in_now">Já possui conta?</string>
    <string name="txt_empty">Campo vazio</string>
    <string name="txt_invalid_email">Email inválido</string>
    <string name="txt_empty_email">O campo é obrigatório</string>
    <string name="txt_invalid_password">Senha deve ter no mínimo 8 caracteres</string>
    <string name="txt_empty_password">O campo é obrigatório</string>
    <string name="btn_txt_login">Entrar</string>
    <string name="btn_txt_register">Cadastrar</string>
    <string name="txt_title_toolbar">Hello %1$s</string>
    <string name="txt_invalid_credentials">Credenciais inválidas</string>
    <string name="txt_unknown_error">Erro desconhecido: %1$s</string>
    <string name="txt_email_already_in_use">O E-mail já existe</string>
    <string name="txt_network_error">Ocorreu um erro com a conexão</string>

    // Home Screen
    <string name="item_title_profile">Perfil</string>
    <string name="item_title_logout">Sair</string>
    <string name="tab_conversations">Conversas</string>
    <string name="tab_contacts">Contatos</string>
    <string name="dialog_title_logout">Deseja mesmo sair?</string>
    <string name="exit">Sair</string>
    <string name="cancel">Cancelar</string>
</resources>